--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://TU-USUARIO.github.io/ciber-dev",
+  "homepage": "https://panchodev.site",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
